Fix checkbox label wrapping issue

--- a/ReduxCore/inc/fields/checkbox/field_checkbox.scss
+++ b/ReduxCore/inc/fields/checkbox/field_checkbox.scss
@@ -5,6 +5,7 @@
   label {
     vertical-align: top;
     line-height: 16px;
+    width: 100%;
     .field-desc {
       margin-top: 0;
       float: left;
